cleaned HTML code and re-structured it
You had some blocks ending without any content which was fixed. Additionally, the lang tag was added and some other elements moved to it's correct place.

--- a/new 1.html
+++ b/new 1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <title>ГЇГ°ГЁГўГҐГІ Г­Г  Г±Г Г©ГІ downloadgames</title>
+  </head>
+  <body>
+    <p>ГЇГ°ГЁГўГҐГІ hello</p>
+    <a href="" target="_blank">ГѕГІГіГЇГЇГЇ</a>
+  </body>
 </html>
-<head>
-</head>
-<title>привет на сайт downloadgames</title>
-<body>
-</body>
-<p>привет hello</p>
-<a href="" target="_blank">ютуппп</a>
